# waist

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yml  docker-compose.yml  docker-run.bat  docker-run.sh  main.py  pyproject.toml  requirements.txt  settings.toml  utils.py
controller/: geodata_controller.py  location_controller.py  weather_controller.py
controller/weather/: current.py  daily.py  hourly.py
frontend/: .env  .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: CurrentWeather.js  DailyForecast.js  ExportData.js  MapEmbed.js  UserHistory.js
frontend/src/utils/: weatherIcons.js
model/: db.py  location.py  weather.py
router/: export_router.py  location_router.py  weather_router.py
schema/: location.py  weather.py
